--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="3rdpic" src="scenery.jpg">
         <img id="4thpic" src="another_scenery.jpg">
     </div>
-    <p id="made">-Designed and made by Shyam Babu</p>
+    <p>by Shyam Babu</p>
     <br><p>© 2020</p>
 </body>
 
