--- a/index.html
+++ b/index.html
@@ -1,25 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-
-    <title>Photo Blog</title>
+    <title>My Favorite Hobby</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
+
+
 
 <body>
-    <h1 id="pb">Photo Blog</h1>
-    <div class="id1">
-        <img id="1stpic" src="image_trees_scenery.jpg">
-        <img id="2ndpic" src="image_mountain_scenery.jpg">
-    </div>
-    <div class="id2">
-        <img id="3rdpic" src="scenery.jpg">
-        <img id="4thpic" src="another_scenery.jpg">
-    </div>
-    <p>by Shyam Babu</p>
-    <br><p>© 2020</p>
+    <ul class="unord">
+        <li class="lii"><a href="#bio">Home</a></li>
+        <li class="lii"><a href="#work">Work</a></li>
+        <li class="lii"><a href="#writing">Writings</a></li>
+        <li class="lii"><a href="#contact">Contact</a></li>
+    </ul>
+    <section>
+        <img src="drawing.png">
+        <h1>My Favorite Hobby
+            <br>
+            Drawing
+        </h1>
+        </div>
+    </section>
+    <section id="bio">
+        <h1></h1>
+        <div class="line"></div>
+        <p>My hobby is drawing. I mostly draw pictures of people, animals and birds. I use crayons, pencils, colour pencils etc to draw pictures. During birthdays of my parents, brother and friends, I gift my best drawings to them. I spend my free time drawing pictures. I got first prize in my school for the drawing competition. I like to draw the sunset the most. I love drawing. I like to become an artist when I grow up.</p>
+    </section>
+    <section id="work">
+        <h1>Work</h1>
+        <div class="line"></div>
+        <br>
+        <h1>I am 10 Years old how can i work?</h1>
+    </section>
+    <section id="writing">
+        <h1>Writings</h1>
+        <div class="line"></div>
+        <br>
+        <br>
+        <a class="wrote_by_tim" href="https://7wonders.shyambabu.repl.co/" target="_blank">7 wonders of the world </a>
+        <br>
+        <br>
+        <br>
+    </section>
+    <section id="contact">
+        <h1>Contacts</h1>
+        <div class="line"></div>
+        <h1>Click <a href="mailto:shyambabumm15@hotmail.com">Here</a> to mail me!</h1>
+    </section>
+    <br>
+    <br>
+    <section id="inspr">
+        <h1>Inspiration</h1>
+        <div class="line"></div>
+        <br>
+        Click on a image to view website!
+        <br>
+        <a href="https://gatesnotes.com" target="_blank"><img src="https://www.gstatic.com/tv/thumb/persons/614/614_v9_bc.jpg"></a>
+        <a href="https://itz-shyam.github.io/Personal-Web/" target="_blank"><img src="WIN_20200310_17_43_06_Pro.jpg"></a>
+    </section>
 </body>
 
 </html>
